# tapedeck

./: CMakeLists.txt  README.odt
CMake/: FindSndfile.cmake
src/: CMakeLists.txt  main.cpp  mul.cpp  mul.h
src/gui/: main.ui
winlibs/sndfile/lib/pkgconfig/: sndfile.pc
